# taskflow-api

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  README_ES.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test.db
.github/workflows/: ci.yml  keep-alive.yml
alembic/: env.py
alembic/versions/: 1510e535976f_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  tasks.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
tests/: conftest.py  test_auth.py  test_health.py  test_tasks.py
